oy - routes and htmls

--- a/src/app/shared/components/side-menu/side-menu.component.html
+++ b/src/app/shared/components/side-menu/side-menu.component.html
@@ -1,1 +1,6 @@
-<p>side-menu works!</p>,
+<h2>Pages</h2>
+<hr>
+<h3 class="mt-3">Reactive </h3>
+<ul class="list-group">
+  <li class="list-inline-item">Title</li>
+</ul>
