--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<h1>HALLO WELT</h1>
-<app-side-menu />
+<div class="row mt-5">
 
-<router-outlet />
+  <div class="col">
+    <router-outlet />
+  </div>
+
+  <div class="col-12 col-sm-4">
+    <app-side-menu />
+  </div>
+
+</div>
