--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -1,17 +1,19 @@
-<h2>Reactivos: Básicos</h2>
+<h2>Reactive: Básics</h2>
 <hr>
 
 <div class="row">
   <div class="col">
 
-    <form autocomplete="off">
+    <form autocomplete="off" [formGroup]="myForm">
 
       <!-- Campo de producto -->
       <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Producto</label>
+        <label class="col-sm-3 col-form-label">Product</label>
         <div class="col-sm-9">
 
-          <input type="text" class="form-control" placeholder="Nombre del producto">
+          <input type="text" class="form-control"
+          placeholder="Nombre del producto"
+          formControlName="name">
 
           <span class="form-text text-danger">
             <!-- Debe de ser de 3 letras -->
@@ -22,9 +24,11 @@
 
       <!-- Campo de producto -->
       <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Precio</label>
+        <label class="col-sm-3 col-form-label">Price</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" placeholder="Precio del producto">
+          <input type="number" class="form-control"
+          placeholder="Precio del producto"
+          formControlName="price">
           <span class="form-text text-danger">
             El precio debe de ser 0 o mayor
           </span>
@@ -33,9 +37,11 @@
 
       <!-- Campo de existencias -->
       <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Existencias</label>
+        <label class="col-sm-3 col-form-label">Stock</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" placeholder="Existencias del producto">
+          <input type="number" class="form-control"
+          placeholder="Existencias del producto"
+          formControlName="inStorage">
 
           <span class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
@@ -66,21 +72,21 @@
   <div class="col">
 
     <span>Valid</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.valid| json }}</pre>
 
     <span>Pristine</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.pristine| json }}</pre>
 
     <span>Touched</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.touched| json }}</pre>
 
     <span>Value</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.value| json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls.price.value| json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls.name.value| json }}</pre>
   </div>
 </div>
