--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -83,6 +83,11 @@
     <span>Value</span>
     <pre>{{ myForm.value| json }}</pre>
 
+    <span class="bg-warning">Errors:</span>
+    <pre>{{ myForm.controls.name.errors| json }}</pre>
+    <pre>{{ myForm.controls.price.errors| json }}</pre>
+    <pre>{{ myForm.controls.inStorage.errors| json }}</pre>
+
     <span>Precio</span>
     <pre>{{ myForm.controls.price.value| json }}</pre>
 
