--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,10 +15,11 @@
           placeholder="Nombre del producto"
           formControlName="name">
 
-          <span class="form-text text-danger">
-            <!-- Debe de ser de 3 letras -->
-            error message
-          </span>
+          @if(myForm.controls['name'].errors){
+            <span class="form-text text-danger">
+              {{getFieldError('name')}}
+            </span>
+          }
         </div>
       </div>
 
@@ -84,14 +85,14 @@
     <pre>{{ myForm.value| json }}</pre>
 
     <span class="bg-warning">Errors:</span>
-    <pre>{{ myForm.controls.name.errors| json }}</pre>
-    <pre>{{ myForm.controls.price.errors| json }}</pre>
-    <pre>{{ myForm.controls.inStorage.errors| json }}</pre>
+    <pre>{{ myForm.controls['name'].errors| json }}</pre>
+    <pre>{{ myForm.controls['price'].errors| json }}</pre>
+    <pre>{{ myForm.controls['inStorage'].errors| json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ myForm.controls.price.value| json }}</pre>
+    <pre>{{ myForm.controls['price'].value| json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ myForm.controls.name.value| json }}</pre>
+    <pre>{{ myForm.controls['name'].value| json }}</pre>
   </div>
 </div>
